eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Docugen_Job__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_1__c</fullName>
        <label>Data_1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_2__c</fullName>
        <label>Data_2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_3__c</fullName>
        <label>Data_3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocType__c</fullName>
        <label>DocType</label>
        <picklist>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Docugen_EBS_Template__c</fullName>
        <label>Docugen EBS Template</label>
        <referenceTo>Docugen_EBS_Template__c</referenceTo>
        <relationshipLabel>Docugen Jobs</relationshipLabel>
        <relationshipName>Docugen_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergeFields__c</fullName>
        <label>MergeFields</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Records__c</fullName>
        <label>Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Docugen Job</label>
    <nameField>
        <displayFormat>DJob-{0000}</displayFormat>
        <label>Docugen Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docugen Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>